tests/snapshots/examples_fixtures/Modules__FunctionalUtils.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/FunctionalUtils.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.FunctionalUtils` doesn't match file path `examples/Modules/FunctionalUtils.flx`.

  examples/Modules/FunctionalUtils.flx:7:1
  |
7 | module Modules.FunctionalUtils {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
